// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly as Casey 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Connect(Header)
    left={
      <IconButton
        name="backIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    right={
      <IconButton
        name="moreIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    shadow={false}
  />
  <Flex
    align="center"
    justify="center"
    style={
      Object {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
    value={1}
  >
    <Connect(ContactHeader)
      dispatch={[Function]}
      isMe={false}
      onChangeStage={[Function]}
      person={
        Object {
          "first_name": "Tester",
          "id": "test",
        }
      }
      type="casey"
    />
  </Flex>
</View>
`;

exports[`renders correctly as Jean 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Connect(Header)
    left={
      <IconButton
        name="backIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    right={
      <IconButton
        name="moreIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    shadow={false}
  />
  <Flex
    align="center"
    justify="center"
    style={
      Object {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
    value={1}
  >
    <Connect(ContactHeader)
      dispatch={[Function]}
      isMe={false}
      onChangeStage={[Function]}
      person={
        Object {
          "first_name": "Tester",
          "id": "test",
        }
      }
      type="jean"
    />
  </Flex>
</View>
`;
